添加了没有输赢判断的五子棋

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="js/index.js"></script>
 </head>
 <body>
-	
+	<canvas width="600" height="600" id="bgcolor"></canvas>
+	<canvas width="600" height="600" id="canvas"></canvas>
 </body>
 </html>
