--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 	<canvas width="600" height="600" id="bgcolor"></canvas>
+	
 	<canvas width="600" height="600" id="canvas"></canvas>
+	<div id='resetting'>
+		<span>重新开始</span>
+	</div>
 </body>
 </html>
