--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 	<div id='resetting'>
 		<span>重新开始</span>
 	</div>
+	<img src="image/qizi.png" alt="" id="qiziimg" style="display:none">
 </body>
 </html>
