增加了输赢判定和悔棋

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	<div id='resetting'>
 		<span>重新开始</span>
 	</div>
+	<div id='huiqi'>
+		<span>悔棋</span>
+	</div>
 	<img src="image/qizi.png" alt="" id="qiziimg" style="display:none">
 </body>
 </html>
